--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,11 +5,11 @@
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   <servlet>
-    <servlet-name>Test</servlet-name>
-    <servlet-class>saitweet.Test</servlet-class>
+    <servlet-name>FormService</servlet-name>
+    <servlet-class>myservlet.FormService</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Test</servlet-name>
-    <url-pattern>/test</url-pattern>
+    <servlet-name>FormService</servlet-name>
+    <url-pattern>/formservice</url-pattern>
   </servlet-mapping>
 </web-app>
